--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 body {
   /* font-family: 'Manrope', sans-serif; */
-  font-family: "Helvetica Neue", Helvetica;
+  font-family: "Montserrat", sans-serif;
   margin: 0 auto;
   max-width: 768px;
 }
